--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <div class="logo">
-    <a href="index.html"><img src="Logo.png" alt="Keylight Growth Logo"></a>
+    <a href="index.html"><img src="assets/Logo.png" alt="Keylight Growth Logo"></a>
   </div>
   <nav>
     <ul>
