--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
 
-  <header>
-    <nav style="max-width: 1200px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 1rem 2rem;">
-      <a href="index.html" style="display: flex; align-items: center;">
-        <img src="Logo.png" alt="Keylight Growth Logo" style="height: 40px; margin-right: 0.5rem;">
-      </a>
-      <ul style="list-style: none; display: flex; gap: 2rem; margin: 0; padding: 0; align-items: center;">
-        <li><a href="services.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Services</a></li>
-        <li><a href="about.html" style="text-decoration: none; color: #09356B; font-weight: bold;">About</a></li>
-        <li><a href="contact.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Contact</a></li>
-        <li>
-          <a href="booking.html" style="background-color: #FFC72C; color: #09356B; padding: 0.5rem 1rem; border-radius: 6px; text-decoration: none; font-weight: bold;">
-            Get Started
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+ <header style="background-color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; border-bottom: 4px solid #09356B;">
+  <a href="index.html" style="display: flex; align-items: center;">
+    <img src="Logo.png" alt="Keylight Growth Logo" style="height: 40px;">
+  </a>
+  <nav>
+    <ul style="display: flex; gap: 2rem; list-style: none; margin: 0; padding: 0; align-items: center;">
+      <li><a href="services.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Services</a></li>
+      <li><a href="about.html" style="text-decoration: none; color: #09356B; font-weight: bold;">About</a></li>
+      <li><a href="contact.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Contact</a></li>
+      <li>
+        <a href="booking.html" style="background-color: #FFC72C; color: #09356B; padding: 0.5rem 1rem; border-radius: 6px; text-decoration: none; font-weight: bold;">
+          Get Started
+        </a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
 
 <section class="hero">
   <div class="hero-content">
