--- a/about.html
+++ b/about.html
@@ -19,11 +19,43 @@
     </ul>
   </nav>
 
-  <section class="page-section">
-    <h1>About Keylight Growth</h1>
-    <p>Keylight Growth partners with modern businesses to empower revenue teams, streamline processes, and accelerate scalability. We transform fragmented sales operations into resilient, high-growth engines through customized strategies, enablement solutions, and cutting-edge technology adoption.</p>
-    <p>We believe growth is not an accident — it’s engineered. Our mission is to architect your success, brick by brick, process by process, with battle-tested frameworks and a human-first approach. From startup disruptors to established market leaders, Keylight Growth delivers real impact at every stage of your business journey.</p>
-  </section>
+ <section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center;">
+  <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">“Growth doesn’t happen by accident. It’s engineered.”</h1>
+  <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto;">At Keylight Growth, we partner with modern businesses to design intentional, scalable growth engines through human-first strategies, smart systems, and expert enablement.</p>
+</section>
+
+<section style="display: flex; flex-wrap: wrap; padding: 4rem 2rem; align-items: center; gap: 3rem; max-width: 1200px; margin: auto;">
+  <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="Team working" style="flex: 1 1 40%; border-radius: 12px; max-width: 100%;">
+  <div style="flex: 1 1 50%;">
+    <h2 style="font-size: 2rem; color: #09356B;">Our Mission</h2>
+    <p style="font-size: 1.1rem; line-height: 1.6; color: #333;">
+      Our mission is to architect growth — brick by brick, process by process, playbook by playbook. We transform fragmented sales operations into high-performing revenue engines through proven frameworks, enablement systems, and cutting-edge tools. From startups to scaleups, we help teams do more with less — and win.
+    </p>
+  </div>
+</section>
+
+<section style="padding: 4rem 2rem; background-color: #f4f6f8;">
+  <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin-left: auto; margin-right: auto;">
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Integrity</h3>
+      <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Clarity</h3>
+      <p>We believe simplicity scales. Our work cuts through noise and aligns your teams.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Excellence</h3>
+      <p>Good enough doesn’t cut it. We deliver polished, measurable, and scalable results.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">People First</h3>
+      <p>We prioritize human connection and collaboration. Our work empowers people.</p>
+    </div>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 Keylight Growth. All rights reserved.</p>
