--- a/about.html
+++ b/about.html
@@ -19,46 +19,90 @@
     </ul>
   </nav>
 
- <section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center;">
-  <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">“Growth doesn’t happen by accident. It’s engineered.”</h1>
-  <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto;">At Keylight Growth, we partner with modern businesses to design intentional, scalable growth engines through human-first strategies, smart systems, and expert enablement.</p>
-</section>
+  <!-- 1. HERO -->
+  <section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center; animation: fadeIn 1.2s ease-out;">
+    <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">“Growth doesn’t happen by accident. It’s engineered.”</h1>
+    <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto;">At Keylight Growth, we partner with modern businesses to design intentional, scalable growth engines through human-first strategies, smart systems, and expert enablement.</p>
+  </section>
 
-<section style="display: flex; flex-wrap: wrap; padding: 4rem 2rem; align-items: center; gap: 3rem; max-width: 1200px; margin: auto;">
-  <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="Team working" style="flex: 1 1 40%; border-radius: 12px; max-width: 100%;">
-  <div style="flex: 1 1 50%;">
-    <h2 style="font-size: 2rem; color: #09356B;">Our Mission</h2>
-    <p style="font-size: 1.1rem; line-height: 1.6; color: #333;">
-      Our mission is to architect growth — brick by brick, process by process, playbook by playbook. We transform fragmented sales operations into high-performing revenue engines through proven frameworks, enablement systems, and cutting-edge tools. From startups to scaleups, we help teams do more with less — and win.
-    </p>
-  </div>
-</section>
+  <!-- 2. MISSION -->
+  <section style="display: flex; flex-wrap: wrap; padding: 4rem 2rem; align-items: center; gap: 3rem; max-width: 1200px; margin: auto; animation: slideUp 1s ease-out;">
+    <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="Team working" style="flex: 1 1 40%; border-radius: 12px; max-width: 100%;">
+    <div style="flex: 1 1 50%;">
+      <h2 style="font-size: 2rem; color: #09356B;">Our Mission</h2>
+      <p style="font-size: 1.1rem; line-height: 1.6; color: #333;">
+        Our mission is to architect growth — brick by brick, process by process, playbook by playbook. We transform fragmented sales operations into high-performing revenue engines through proven frameworks, enablement systems, and cutting-edge tools. From startups to scaleups, we help teams do more with less — and win.
+      </p>
+    </div>
+  </section>
 
-<section style="padding: 4rem 2rem; background-color: #f4f6f8;">
-  <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin-left: auto; margin-right: auto;">
-    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-      <h3 style="color: #09356B;">Integrity</h3>
-      <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
+  <!-- 3. VALUES -->
+  <section style="padding: 4rem 2rem; background-color: #f4f6f8; animation: fadeIn 1s ease-out;">
+    <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin-left: auto; margin-right: auto;">
+      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+        <h3 style="color: #09356B;">Integrity</h3>
+        <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
+      </div>
+      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+        <h3 style="color: #09356B;">Clarity</h3>
+        <p>We believe simplicity scales. Our work cuts through noise and aligns your teams.</p>
+      </div>
+      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+        <h3 style="color: #09356B;">Excellence</h3>
+        <p>Good enough doesn’t cut it. We deliver polished, measurable, and scalable results.</p>
+      </div>
+      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+        <h3 style="color: #09356B;">People First</h3>
+        <p>We prioritize human connection and collaboration. Our work empowers people.</p>
+      </div>
     </div>
-    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-      <h3 style="color: #09356B;">Clarity</h3>
-      <p>We believe simplicity scales. Our work cuts through noise and aligns your teams.</p>
-    </div>
-    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-      <h3 style="color: #09356B;">Excellence</h3>
-      <p>Good enough doesn’t cut it. We deliver polished, measurable, and scalable results.</p>
-    </div>
-    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-      <h3 style="color: #09356B;">People First</h3>
-      <p>We prioritize human connection and collaboration. Our work empowers people.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
+  <!-- 4. FOUNDER QUOTE -->
+  <section style="padding: 4rem 2rem; text-align: center; animation: fadeIn 1s ease-in;">
+    <img src="https://images.unsplash.com/photo-1603415526960-f9e41893d906" alt="Founder portrait" style="width: 140px; border-radius: 50%; margin-bottom: 1rem;">
+    <blockquote style="font-size: 1.3rem; font-style: italic; max-width: 700px; margin: auto; color: #09356B;">
+      “Every startup I worked with kept saying the same thing: ‘We need structure. We need clarity.’ That’s why I started Keylight Growth.”
+    </blockquote>
+    <p style="margin-top: 1rem; font-weight: bold; color: #333;">Ahmed Abdel-Raouf, Founder</p>
+  </section>
 
+  <!-- 5. TIMELINE -->
+  <section style="padding: 4rem 2rem; background-color: #fefefe; animation: slideUp 1s ease-in-out;">
+    <h2 style="text-align: center; color: #09356B; font-size: 2rem;">Our Journey</h2>
+    <ul style="list-style: none; max-width: 700px; margin: 2rem auto; padding: 0;">
+      <li style="margin-bottom: 2rem;">
+        <strong style="color: #004c97;">2020 — Spark:</strong> Idea sparked after seeing early-stage teams struggle to scale despite strong products.
+      </li>
+      <li style="margin-bottom: 2rem;">
+        <strong style="color: #004c97;">2021 — Foundation:</strong> Keylight Growth launched with a vision to simplify, enable, and drive impact.
+      </li>
+      <li style="margin-bottom: 2rem;">
+        <strong style="color: #004c97;">2022 — Proof:</strong> Partnered with 5 early clients and helped them exceed pipeline targets by 2x–4x.
+      </li>
+      <li>
+        <strong style="color: #004c97;">2023–Now — Expansion:</strong> Team, tech stack, and services scaled to support VC-backed scaleups and enterprise pilots.
+      </li>
+    </ul>
+  </section>
+
+  <!-- 6. FOOTER -->
   <footer>
     <p>© 2025 Keylight Growth. All rights reserved.</p>
   </footer>
+
+  <!-- ANIMATIONS -->
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </body>
+
 </html>
