--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
+ <nav class="navbar">
+  <div class="nav-container">
     <a href="index.html" class="logo">
-      <img src="assets/Logo.png" alt="Keylight Growth Logo" />
+      <img src="assets/Logo.png" alt="Keylight Growth Logo">
     </a>
     <ul class="nav-links">
       <li><a href="services.html">Services</a></li>
@@ -17,7 +18,9 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="booking.html" class="cta-button">Get Started</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- 1. HERO -->
   <section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center; animation: fadeIn 1.2s ease-out;">
