--- a/about.html
+++ b/about.html
@@ -7,19 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <nav class="navbar">
-  <div class="nav-container">
-    <a href="index.html" class="logo">
-      <img src="assets/Logo.png" alt="Keylight Growth Logo">
-    </a>
-    <ul class="nav-links">
-      <li><a href="services.html">Services</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="booking.html" class="cta-button">Get Started</a></li>
+  <nav>
+    <ul style="display: flex; gap: 2rem; list-style: none; margin: 0; padding: 0; align-items: center;">
+      <li><a href="services.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Services</a></li>
+      <li><a href="about.html" style="text-decoration: none; color: #09356B; font-weight: bold;">About</a></li>
+      <li><a href="contact.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Contact</a></li>
+      <li>
+        <a href="booking.html" style="background-color: #FFC72C; color: #09356B; padding: 0.5rem 1rem; border-radius: 6px; text-decoration: none; font-weight: bold;">
+          Get Started
+        </a>
+      </li>
     </ul>
-  </div>
-</nav>
+  </nav>
 
 
   <!-- 1. HERO -->
