--- a/about.html
+++ b/about.html
@@ -39,27 +39,35 @@
   </section>
 
   <!-- 3. VALUES -->
-  <section style="padding: 4rem 2rem; background-color: #f4f6f8; animation: fadeIn 1s ease-out;">
-    <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin-left: auto; margin-right: auto;">
-      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-        <h3 style="color: #09356B;">Integrity</h3>
-        <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
-      </div>
-      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-        <h3 style="color: #09356B;">Clarity</h3>
-        <p>We believe simplicity scales. Our work cuts through noise and aligns your teams.</p>
-      </div>
-      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-        <h3 style="color: #09356B;">Excellence</h3>
-        <p>Good enough doesn’t cut it. We deliver polished, measurable, and scalable results.</p>
-      </div>
-      <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
-        <h3 style="color: #09356B;">People First</h3>
-        <p>We prioritize human connection and collaboration. Our work empowers people.</p>
-      </div>
+<section style="padding: 4rem 2rem; background-color: #f4f6f8;">
+  <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
+  <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin: auto;">
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Integrity</h3>
+      <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
     </div>
-  </section>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Clarity</h3>
+      <p>We believe simplicity scales. Our work cuts through noise and aligns your teams.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Excellence</h3>
+      <p>Good enough doesn’t cut it. We deliver polished, measurable, and scalable results.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">People First</h3>
+      <p>We prioritize human connection and collaboration. Our work empowers people.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Innovation</h3>
+      <p>We embrace change and seek modern, tech-forward solutions that help teams outpace the status quo.</p>
+    </div>
+    <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
+      <h3 style="color: #09356B;">Accountability</h3>
+      <p>We own our outcomes and follow through with integrity. Results matter — and so does responsibility.</p>
+    </div>
+  </div>
+</section>
 
   <!-- 4. FOUNDER QUOTE -->
   <section style="padding: 4rem 2rem; text-align: center; animation: fadeIn 1s ease-in;">
