--- a/about.html
+++ b/about.html
@@ -79,23 +79,27 @@
   </section>
 
   <!-- 5. TIMELINE -->
-  <section style="padding: 4rem 2rem; background-color: #fefefe; animation: slideUp 1s ease-in-out;">
-    <h2 style="text-align: center; color: #09356B; font-size: 2rem;">Our Journey</h2>
-    <ul style="list-style: none; max-width: 700px; margin: 2rem auto; padding: 0;">
-      <li style="margin-bottom: 2rem;">
-        <strong style="color: #004c97;">2020 — Spark:</strong> Idea sparked after seeing early-stage teams struggle to scale despite strong products.
-      </li>
-      <li style="margin-bottom: 2rem;">
-        <strong style="color: #004c97;">2021 — Foundation:</strong> Keylight Growth launched with a vision to simplify, enable, and drive impact.
-      </li>
-      <li style="margin-bottom: 2rem;">
-        <strong style="color: #004c97;">2022 — Proof:</strong> Partnered with 5 early clients and helped them exceed pipeline targets by 2x–4x.
-      </li>
-      <li>
-        <strong style="color: #004c97;">2023–Now — Expansion:</strong> Team, tech stack, and services scaled to support VC-backed scaleups and enterprise pilots.
-      </li>
-    </ul>
-  </section>
+<section style="padding: 4rem 2rem; background-color: #fefefe; animation: slideUp 1s ease-in-out;">
+  <h2 style="text-align: center; color: #09356B; font-size: 2rem;">Our Journey</h2>
+  <ul style="list-style: none; max-width: 800px; margin: 2rem auto; padding: 0; font-size: 1.1rem; color: #09356B;">
+    <li style="margin-bottom: 2rem; display: flex; align-items: start; gap: 1rem;">
+      <span style="font-size: 1.8rem;">💡</span>
+      <div><strong>2020 — Spark:</strong> Idea sparked after seeing early-stage teams struggle to scale despite strong products.</div>
+    </li>
+    <li style="margin-bottom: 2rem; display: flex; align-items: start; gap: 1rem;">
+      <span style="font-size: 1.8rem;">🏗️</span>
+      <div><strong>2021 — Foundation:</strong> Keylight Growth launched with a vision to simplify, enable, and drive impact.</div>
+    </li>
+    <li style="margin-bottom: 2rem; display: flex; align-items: start; gap: 1rem;">
+      <span style="font-size: 1.8rem;">📈</span>
+      <div><strong>2022 — Proof:</strong> Partnered with 5 early clients and helped them exceed pipeline targets by 2x–4x.</div>
+    </li>
+    <li style="display: flex; align-items: start; gap: 1rem;">
+      <span style="font-size: 1.8rem;">🚀</span>
+      <div><strong>2023–Now — Expansion:</strong> Team, tech stack, and services scaled to support VC-backed scaleups and enterprise pilots.</div>
+    </li>
+  </ul>
+</section>
 
   <!-- 6. FOOTER -->
   <footer>
