--- a/about.html
+++ b/about.html
@@ -21,27 +21,27 @@
   </div>
 </nav>
 
-  <!-- 1. HERO -->
-  <section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center; animation: fadeIn 1.2s ease-out;">
-    <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">“Growth doesn’t happen by accident. It’s engineered.”</h1>
-    <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto;">At Keylight Growth, we partner with modern businesses to design intentional, scalable growth engines through human-first strategies, smart systems, and expert enablement.</p>
-  </section>
+<!-- 1. HERO WITH ANIMATION -->
+<section style="background: linear-gradient(to right, #09356B, #004c97); color: white; padding: 4rem 2rem; text-align: center; animation: fadeIn 1.2s ease-out;">
+  <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">“Growth doesn’t happen by accident. It’s engineered.”</h1>
+  <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto;">At Keylight Growth, we partner with modern businesses to design intentional, scalable growth engines through human-first strategies, smart systems, and expert enablement.</p>
+</section>
 
-  <!-- 2. MISSION -->
-  <section style="display: flex; flex-wrap: wrap; padding: 4rem 2rem; align-items: center; gap: 3rem; max-width: 1200px; margin: auto; animation: slideUp 1s ease-out;">
-    <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="Team working" style="flex: 1 1 40%; border-radius: 12px; max-width: 100%;">
-    <div style="flex: 1 1 50%;">
-      <h2 style="font-size: 2rem; color: #09356B;">Our Mission</h2>
-      <p style="font-size: 1.1rem; line-height: 1.6; color: #333;">
-        Our mission is to architect growth — brick by brick, process by process, playbook by playbook. We transform fragmented sales operations into high-performing revenue engines through proven frameworks, enablement systems, and cutting-edge tools. From startups to scaleups, we help teams do more with less — and win.
-      </p>
-    </div>
-  </section>
+<!-- 2. MISSION + TEAM IMAGE -->
+<section style="display: flex; flex-wrap: wrap; padding: 4rem 2rem; align-items: center; gap: 3rem; max-width: 1200px; margin: auto; animation: slideUp 1s ease-out;">
+  <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="Team working" style="flex: 1 1 40%; border-radius: 12px; max-width: 100%;">
+  <div style="flex: 1 1 50%;">
+    <h2 style="font-size: 2rem; color: #09356B;">Our Mission</h2>
+    <p style="font-size: 1.1rem; line-height: 1.6; color: #333;">
+      Our mission is to architect growth — brick by brick, process by process, playbook by playbook. We transform fragmented sales operations into high-performing revenue engines through proven frameworks, enablement systems, and cutting-edge tools. From startups to scaleups, we help teams do more with less — and win.
+    </p>
+  </div>
+</section>
 
-  <!-- 3. VALUES -->
-<section style="padding: 4rem 2rem; background-color: #f4f6f8;">
+<!-- 3. OUR VALUES GRID (3x3) -->
+<section style="padding: 4rem 2rem; background-color: #f4f6f8; animation: fadeIn 1s ease-out;">
   <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
-  <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin: auto;">
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin: auto;">
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Integrity</h3>
       <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
@@ -60,25 +60,25 @@
     </div>
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Innovation</h3>
-      <p>We embrace change and seek modern, tech-forward solutions that help teams outpace the status quo.</p>
+      <p>We embrace change, challenge the norm, and continuously iterate to stay ahead.</p>
     </div>
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Accountability</h3>
-      <p>We own our outcomes and follow through with integrity. Results matter — and so does responsibility.</p>
+      <p>We own outcomes. We take responsibility and deliver with precision and intent.</p>
     </div>
   </div>
 </section>
 
-  <!-- 4. FOUNDER QUOTE -->
-  <section style="padding: 4rem 2rem; text-align: center; animation: fadeIn 1s ease-in;">
-    <img src="https://images.unsplash.com/photo-1603415526960-f9e41893d906" alt="Founder portrait" style="width: 140px; border-radius: 50%; margin-bottom: 1rem;">
-    <blockquote style="font-size: 1.3rem; font-style: italic; max-width: 700px; margin: auto; color: #09356B;">
-      “Every startup I worked with kept saying the same thing: ‘We need structure. We need clarity.’ That’s why I started Keylight Growth.”
-    </blockquote>
-    <p style="margin-top: 1rem; font-weight: bold; color: #333;">Our Founder</p>
-  </section>
+<!-- 4. FOUNDER QUOTE SECTION -->
+<section style="padding: 4rem 2rem; text-align: center; animation: fadeIn 1s ease-in;">
+  <img src="https://images.unsplash.com/photo-1603415526960-f9e41893d906" alt="Founder portrait" style="width: 140px; border-radius: 50%; margin-bottom: 1rem;">
+  <blockquote style="font-size: 1.3rem; font-style: italic; max-width: 700px; margin: auto; color: #09356B;">
+    “Every startup I worked with kept saying the same thing: ‘We need structure. We need clarity.’ That’s why I started Keylight Growth.”
+  </blockquote>
+  <p style="margin-top: 1rem; font-weight: bold; color: #333;">Ahmed Abdel-Raouf, Founder</p>
+</section>
 
-  <!-- 5. TIMELINE -->
+<!-- 5. HOW WE STARTED TIMELINE -->
 <section style="padding: 4rem 2rem; background-color: #fefefe; animation: slideUp 1s ease-in-out;">
   <h2 style="text-align: center; color: #09356B; font-size: 2rem;">Our Journey</h2>
   <ul style="list-style: none; max-width: 800px; margin: 2rem auto; padding: 0; font-size: 1.1rem; color: #09356B;">
@@ -100,6 +100,7 @@
     </li>
   </ul>
 </section>
+
 
   <!-- 6. FOOTER -->
   <footer>
