--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
 </section>
 
 <!-- 3. OUR VALUES GRID (3x3) -->
-<section style="padding: 4rem 2rem; background-color: #f4f6f8; animation: fadeIn 1s ease-out;">
+<section style="padding: 4rem 2rem; background-color: #f4f6f8;">
   <h2 style="text-align: center; font-size: 2rem; color: #09356B;">Our Core Values</h2>
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin: auto;">
+  <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; margin-top: 2rem; max-width: 1100px; margin: auto;">
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Integrity</h3>
       <p>We lead with transparency, honesty, and authenticity in every engagement.</p>
@@ -60,14 +60,15 @@
     </div>
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Innovation</h3>
-      <p>We embrace change, challenge the norm, and continuously iterate to stay ahead.</p>
+      <p>We embrace change and seek modern, tech-forward solutions that help teams outpace the status quo.</p>
     </div>
     <div style="background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05);">
       <h3 style="color: #09356B;">Accountability</h3>
-      <p>We own outcomes. We take responsibility and deliver with precision and intent.</p>
+      <p>We own our outcomes and follow through with integrity. Results matter — and so does responsibility.</p>
     </div>
   </div>
 </section>
+
 
 <!-- 4. FOUNDER QUOTE SECTION -->
 <section style="padding: 4rem 2rem; text-align: center; animation: fadeIn 1s ease-in;">
