--- a/services.html
+++ b/services.html
@@ -7,7 +7,8 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
+ <nav class="navbar">
+  <div class="nav-container">
     <a href="index.html" class="logo">
       <img src="assets/Logo.png" alt="Keylight Growth Logo" />
     </a>
@@ -15,9 +16,10 @@
       <li><a href="services.html">Services</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="booking.html" class="cta-button">Get Started</a></li>
     </ul>
-  </nav>
+    <a href="booking.html" class="cta-button">Get Started</a>
+  </div>
+</nav>
 
   <section class="page-section">
     <h1>Our Services</h1>
